// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> render matches snapshots 1`] = `<styled.div />`;

exports[`<Sidebar /> render matches snapshots 2`] = `
<styled.div>
  <Styled(styled.h1)
    onClick={[Function]}
  >
    A Sidebar
  </Styled(styled.h1)>
</styled.div>
`;

exports[`<Sidebar /> render matches snapshots 3`] = `
<styled.div>
  <Styled(styled.h1)
    onClick={[Function]}
  >
    A Sidebar
  </Styled(styled.h1)>
  <styled.ul
    isOpen={false}
  >
    <styled.li
      key="cb6370c219aa53ec13b2d09141b7982a361f5b6d"
      onClick={[Function]}
    >
      <a>
        foo
      </a>
    </styled.li>
    <styled.li
      key="cb6370c219aa53ec13b2d09141b7982a361f5b6d"
      onClick={[Function]}
    >
      <a>
        foo
      </a>
    </styled.li>
    <styled.li
      key="cb6370c219aa53ec13b2d09141b7982a361f5b6d"
      onClick={[Function]}
    >
      <a>
        foo
      </a>
    </styled.li>
    <styled.li
      key="cb6370c219aa53ec13b2d09141b7982a361f5b6d"
      onClick={[Function]}
    >
      <a>
        foo
      </a>
    </styled.li>
    <styled.li
      key="cb6370c219aa53ec13b2d09141b7982a361f5b6d"
      onClick={[Function]}
    >
      <a>
        foo
      </a>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`<Sidebar /> render matches snapshots 4`] = `
<styled.div>
  <Styled(styled.h1)
    onClick={[Function]}
  >
    A Sidebar
  </Styled(styled.h1)>
  <styled.ul
    isOpen={false}
  />
  <styled.div
    isOpen={false}
    onClick={[Function]}
  >
    <a>
      foo
    </a>
    <a>
      foo
    </a>
    <a>
      foo
    </a>
    <a>
      foo
    </a>
    <a>
      foo
    </a>
  </styled.div>
</styled.div>
`;
